10-auth/lldap/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lldap
  namespace: auth
  labels:
    app: lldap
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: lldap
  template:
    metadata:
      labels:
        app: lldap
    spec:
      containers:
        - name: lldap
          image: lldap/lldap:stable
          ports:
            - name: web
              containerPort: 17170
            - name: ldap
              containerPort: 3890
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: lldap-data
